--- a/package.json
+++ b/package.json
@@ -13,23 +13,17 @@
     "build" : "gulp",
     "deploy" : "./scripts.sh deploy"
   },
-  "devDependencies": {
-    "gulp": "^3.8.8"
-  },
   "dependencies": {
-    "bootstrap": "^3.0.0",
-    "jquery": "^2.1.4",
-    "js-cookie": "^2.1.0",
-    "laravel-elixir": "^5.0.0",
-    "laravel-elixir-jade": "*",
-    "moment": "^2.10.6",
-    "promise": "^7.1.1",
-    "sweetalert": "^1.1.3",
-    "underscore": "^1.8.3",
-    "urijs": "^1.17.0",
-    "vue": "^1.0.13",
+    "vue": "^1.0.0"
+  },
+  "devDependencies": {
+    "vue-router": "*",
     "vue-resource": "^0.7.0",
-    "bragit": "*",
-    "semantic-ui-less": "*"
+    "gulp": "^3.8.8",
+    "semantic-ui-less": "*",
+    "jquery": "^2.1.4",
+    "laravel-elixir": "^5.0.0",
+    "laravel-elixir-vueify": "*",
+    "bragit": "*"
   }
 }
